Avoid deprecated URL constructor.