@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2024 Tasktop Technologies, Polarion Software and others.
+ * Copyright (c) 2009, 2025 Tasktop Technologies, Polarion Software and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,6 +13,8 @@ package net.openchrom.installer.model;
 import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 
@@ -43,10 +45,12 @@ public class JarDiscoverySource implements IDiscoverySource {
 
 		try {
 			String prefix = jarFile.toURI().toURL().toExternalForm();
-			return new URL("jar:" + prefix + "!/" + URLEncoder.encode(resourceName, "utf-8")); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+			return new URI("jar:" + prefix + "!/" + URLEncoder.encode(resourceName, "utf-8")).toURL(); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 		} catch(MalformedURLException e) {
 			throw new IllegalStateException(e);
 		} catch(UnsupportedEncodingException e) {
+			throw new IllegalStateException(e);
+		} catch(URISyntaxException e) {
 			throw new IllegalStateException(e);
 		}
 	}
