@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023, 2024 Lablicate GmbH.
+ * Copyright (c) 2023, 2025 Lablicate GmbH.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -12,6 +12,8 @@
 package net.openchrom.xxd.identifier.supplier.cas.identifier;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.MessageFormat;
 import java.util.List;
@@ -59,12 +61,14 @@ public class CommonChemistryTargetIdentifier implements ITargetIdentifierSupplie
 		try {
 			String cas = libraryInformation.getCasNumber();
 			if(cas != null && !cas.isEmpty() && !cas.equals("0-00-0")) {
-				url = new URL(MessageFormat.format(CAS_DETAIL_URL, cas));
+				url = new URI(MessageFormat.format(CAS_DETAIL_URL, cas)).toURL();
 			} else {
 				String name = libraryInformation.getName();
-				url = new URL(MessageFormat.format(QUERY_RESULTS_URL, name));
+				url = new URI(MessageFormat.format(QUERY_RESULTS_URL, name)).toURL();
 			}
 		} catch(MalformedURLException e) {
+			logger.warn(e);
+		} catch(URISyntaxException e) {
 			logger.warn(e);
 		}
 		return url;
