@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023, 2024 Lablicate GmbH.
+ * Copyright (c) 2023, 2025 Lablicate GmbH.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
@@ -12,6 +12,8 @@
 package net.openchrom.xxd.identifier.supplier.foodb.identifier;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.DecimalFormat;
 import java.text.MessageFormat;
@@ -65,9 +67,11 @@ public class ScanIdentifier implements IScanIdentifierSupplier {
 		URL url = null;
 		try {
 			if(scan != null && scan instanceof IScanMSD scanMSD) {
-				url = new URL(MessageFormat.format(GC_MS_SEARCH_URL, extractTracesIntensity(scanMSD, 10)));
+				url = new URI(MessageFormat.format(GC_MS_SEARCH_URL, extractTracesIntensity(scanMSD, 10))).toURL();
 			}
 		} catch(MalformedURLException e) {
+			logger.warn(e);
+		} catch(URISyntaxException e) {
 			logger.warn(e);
 		}
 		return url;
